--- a/Companyinfo_KvK_Extention.ipynb
+++ b/Companyinfo_KvK_Extention.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "def extract(kvknr):\n",
     "    global skip\n",
-    "    url = \"https://companyinfo.nl/freemium/?externalSearch=\"+kvknr\n",
+    "    url = \"https://bagviewer.kadaster.nl/lvbag/bag-viewer/index.html#?\"+kvknr\n",
     "    html = request.urlopen(url).read().decode('utf8')\n",
     "    raw = BeautifulSoup(html, 'html.parser').get_text()\n",
     "    \n",
