informatie bij companyinfo

--- a/company_info/Companyinfo_KvK_Extention.ipynb
+++ b/company_info/Companyinfo_KvK_Extention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,10 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#kvk-nummers die niet werken\n",
     "if os.path.isfile(\"kvk_companyinfo_skip\" + \".p\"):\n",
     "    with open(\"kvk_companyinfo_skip\" + \".p\", 'rb') as fp:\n",
     "        skip = pickle.load(fp)\n",
@@ -28,10 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#processed kvk-nummers (in het geval van een restart van de run om duplicates the voorkomen)\n",
     "if os.path.isfile(\"kvk_companyinfo.csv\"):\n",
     "    kvk_processed = pd.read_csv(\"kvk_companyinfo.csv\",dtype=object)\n",
     "else:\n",
@@ -41,16 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#extract de informatie van companyinfo op basis van het kvk-nummer\n",
     "def extract(kvknr):\n",
     "    global skip\n",
-    "    url = \"https://bagviewer.kadaster.nl/lvbag/bag-viewer/index.html#?\"+kvknr\n",
+    "    \n",
+    "    #zoek functie om het bedrijf te vinden van het kvk-nummer\n",
+    "    url = \"https://companyinfo.nl/freemium/?externalSearch=\"+kvknr\n",
     "    html = request.urlopen(url).read().decode('utf8')\n",
     "    raw = BeautifulSoup(html, 'html.parser').get_text()\n",
     "    \n",
+    "    #vind de link naar het bedrijf en extract de informatie    \n",
     "    if raw.find('seoUrl') > 0:\n",
     "        new_url = ('/').join(raw[raw.find('seoUrl')+15:raw.find('resultAmount')-5].split('\\\\u002F'))\n",
     "        prefix = \"https://companyinfo.nl/organisatieprofiel/\"\n",
@@ -67,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,6 +86,7 @@
     }
    ],
    "source": [
+    "#voorbeeld\n",
     "kvknr = '01036591'\n",
     "reg_date, emp_class = extract(kvknr)\n",
     "\n",
@@ -89,20 +96,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kvknr_dict = pd.read_csv(\"kvknr.csv\", header=None, dtype=str)\n",
-    "kvknr_dict.columns = [\"kvknr\"]\n",
-    "counter = 0\n",
-    "\n",
+    "#dataset net kvk-nummers uit de kvk-dataset\n",
+    "kvknr_dict = pd.read_csv(\"../kvk/kvknr.csv\", header=None, dtype=str)\n",
+    "kvknr_dict.columns = [\"kvknr\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#loop over alle kvk-nummers en extract de informatie van companyinfo\n",
+    "#kvk-nummers in skip geven geen resultaten bij companyinfo\n",
+    "#sleep is toegevoegd om de site niet te overloaden\n",
     "for kvknr in kvknr_dict[\"kvknr\"]:\n",
     "    if kvknr not in kvk_processed[\"kvknr\"].to_list():\n",
     "        if kvknr not in skip:\n",
-    "    #         counter += 1\n",
     "            print(kvknr)\n",
-    "    #         if counter%10 == 0:\n",
     "            time.sleep(5)\n",
     "            reg_date, emp_class = extract(kvknr)\n",
     "            kvk_processed = kvk_processed.append(pd.DataFrame([[kvknr,reg_date,emp_class]],columns=columns),ignore_index=True)"
@@ -110,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +198,7 @@
        "6095  75866056  19-09-2019        02"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,6 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#opslaan van resultaten\n",
     "kvk_processed.to_csv(\"kvk_companyinfo.csv\",index=False)"
    ]
   },
@@ -207,47 +223,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#opslaan van kvk-nummers zonder resultaat\n",
     "with open(\"kvk_companyinfo_skip\" + '.p', 'wb') as fp:\n",
     "        pickle.dump(skip, fp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['01182326',\n",
-       " '02042467',\n",
-       " '02080962',\n",
-       " '02319190',\n",
-       " '05010492',\n",
-       " '05076302',\n",
-       " '06073565',\n",
-       " '08164196',\n",
-       " '09115800',\n",
-       " '09154622',\n",
-       " '11025007',\n",
-       " '11045862']"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "skip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
