kvk informatie en sbi-codes informatie

--- a/kvk/KvK_ID_extractor.ipynb
+++ b/kvk/KvK_ID_extractor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,29 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#open kvk-dataset\n",
     "data = pd.read_excel(\"DatasetKvK01102019.xls\", usecols = [\"DOSSIER\"], dtype=str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "id_list = data[\"DOSSIER\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "id_list.to_csv(\"kvknr.csv\", header = False,index = False)"
    ]
   },
   {
@@ -41,7 +24,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#creeer lijst met kvk-nummers\n",
+    "id_list = data[\"DOSSIER\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sla kvk-nummers op\n",
+    "id_list.to_csv(\"kvknr.csv\", header = False,index = False)"
+   ]
   }
  ],
  "metadata": {
