--- a/kvk/sbi_codes/SBIcodes_definition.ipynb
+++ b/kvk/sbi_codes/SBIcodes_definition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,47 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('sbi.csv',header=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns = [\"branch\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.branch.str.split(\" \", 1,expand=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns = [\"branch_code\", \"branch_name\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv(\"sbi_codes.csv\", header=True,index=False)"
+    "#open file van sbi (ongefiltered)\n",
+    "df = pd.read_csv('sbi_raw.csv',header=None)"
    ]
   },
   {
@@ -59,7 +24,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#hernoem colom\n",
+    "df.columns = [\"branch\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#splits namen\n",
+    "df = df.branch.str.split(\" \", 1,expand=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hernoem colommen\n",
+    "df.columns = [\"branch_code\", \"branch_name\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sla sbi-codes op\n",
+    "df.to_csv(\"sbi_codes.csv\", header=True,index=False)"
+   ]
   }
  ],
  "metadata": {
